--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body{
-background-image:url("https://s3-ap-southeast-1.amazonaws.com/jurnal-blog-assets/wp-content/uploads/2019/02/16111950/Jurnal_Blog_Cara-Menghitung-BEP-untuk-Coffee-Shop.jpg-4.jpg" ) ;
-background-repeat: no-repeat;
+background-image: url("FONDO.jpg");
 background-size: cover;
 background-attachment: fixed;
 
